src/objects/CareerServices__c.object
<CustomObject>
    <description>This object allows the Career Services team to track all appointment sessions completed for students related to career services..</description>
    <fields>
        <fullName>Appointment_Sessions__c</fullName>
        <label>Appointment Sessions</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseAge__c</fullName>
        <formula>IF(ISPICKVAL(RecordStatus__c , &quot;Open&quot; ), ROUND(NOW()-CreatedDate, 0), 
IF(ISPICKVAL(RecordStatus__c , &quot;In progress&quot; ), ROUND(NOW()-CreatedDate, 0), 
IF(ISPICKVAL(RecordStatus__c , &quot;Duplicate&quot; ), ROUND(DateClosed__c-CreatedDate, 0), 
IF(ISPICKVAL(RecordStatus__c , &quot;Closed&quot; ), ROUND(DateClosed__c-CreatedDate, 0), NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollegeDegree__c</fullName>
        <label>College/Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA - Healthcare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Careers</relationshipLabel>
        <relationshipName>CareerServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <label>DateClosed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <formula>Student__r.WGUDegreeProgram__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed full-time in my degree area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed part-time in my degree area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed full-time but NOT in my degree area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed part-time but NOT in my degree area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed but seeking other employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed but seeking employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in the labot market and not seeking employment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>A formula field that pulls in the student&apos;s first name.</description>
        <formula>Student__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraduationEmail__c</fullName>
        <label>Graduation Email</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HowdidyoulearnaboutCareerProfess__c</fullName>
        <label>How did you find out about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni &amp; Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Student/Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student/Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Handbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WellConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsthisyourfirstapptwithCareerPr__c</fullName>
        <label>Is this your first appt with CPD</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogACall__c</fullName>
        <formula>HYPERLINK(&quot;/00T/e?title=Call&amp;what_id=&quot;&amp;Id&amp;&quot;&amp;followup=1&amp;tsk5=Call&amp;RecordType=01230000000c59X&amp;ent=Task&amp;p2_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=/&quot;&amp;Id,IMAGE( 
&quot;/servlet/servlet.ImageServer?id=015a00000023DzU&amp;oid=00Df0000002MhY1&amp;lastMod=1369231472000&quot;,&quot;Log A Call&quot;),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log A Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pleaseindicatethecareerspecialistwh__c</fullName>
        <label>Specialist Providing Career Support</label>
        <picklist>
            <picklistValues>
                <fullName>Jessica Mitchell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karen McLaughlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leah McNally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Les Vance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcella Ryan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredMethondofContact__c</fullName>
        <label>Preferred Methond of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredPhone__c</fullName>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferredemail__c</fullName>
        <label>Preferred email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Questionsandassistanceyouareseeking__c</fullName>
        <inlineHelpText>What questions do you have or what assistance are you Seeking</inlineHelpText>
        <label>Questions and assistance you are seeking</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondaryType__c</fullName>
        <label>Secondary Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SendQuickEmail__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot;&amp;Id&amp;&quot;&amp;p2_lkid=&quot;&amp;Student__r.Id&amp;&quot;&amp;p24=&quot;&amp;Student__r.OtherEmail__c&amp;
&quot;&amp;p26=careers@wgu.edu&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a00000023DzZ&amp;oid=00Df0000002MhY1&amp;lastMod=1369231498000&quot;,&quot;Send Email&quot;),&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendQuickEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftClose__c</fullName>
        <label>Soft Close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusatWGU__c</fullName>
        <label>Status at WGU</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend of the University</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <formula>Student__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <formula>Student__r.My_WGU_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Career Services</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <description>US time Zone abbreviations</description>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Career Decision Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Services Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Search Strategies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume/Cover Letter (Reviewed/Development)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnemployedOutreachcall__c</fullName>
        <label>Unemployed Outreach call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGUDegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Career Services</relationshipLabel>
        <relationshipName>Career_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Career Services</label>
    <listViews>
        <fullName>CareerServicesAllClosed</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>RecordStatus__c</columns>
        <columns>Degree__c</columns>
        <columns>StatusatWGU__c</columns>
        <columns>EmploymentStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CaseAge__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CareerServices__c.CareerServices</value>
        </filters>
        <filters>
            <field>RecordStatus__c</field>
            <operation>equals</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Career Services - All Closed</label>
        <sharedTo>
            <group>CareerServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CareerServicesAllOpen</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>RecordStatus__c</columns>
        <columns>Degree__c</columns>
        <columns>StatusatWGU__c</columns>
        <columns>EmploymentStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CaseAge__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CareerServices__c.CareerServices</value>
        </filters>
        <filters>
            <field>RecordStatus__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kmclaug,lvance,lmcnall,jmitche,mryan1,cliff.g</value>
        </filters>
        <label>Career Services - All Open</label>
        <sharedTo>
            <group>CareerServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CareerServicesMyOpen</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>RecordStatus__c</columns>
        <columns>Degree__c</columns>
        <columns>StatusatWGU__c</columns>
        <columns>EmploymentStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CaseAge__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CareerServices__c.CareerServices</value>
        </filters>
        <filters>
            <field>RecordStatus__c</field>
            <operation>equals</operation>
            <value>New,In progress</value>
        </filters>
        <label>Career Services - My Open</label>
        <sharedTo>
            <group>CareerServices</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CareerServicesQueue</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>RecordStatus__c</columns>
        <columns>Degree__c</columns>
        <columns>StatusatWGU__c</columns>
        <columns>EmploymentStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CaseAge__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CareerServices__c.CareerServices</value>
        </filters>
        <filters>
            <field>RecordStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>kmclaug,lvance,lmcnall,jmitche,mryan1,cliff.g</value>
        </filters>
        <label>Career Services - Queue</label>
        <sharedTo>
            <group>CareerServices</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CS# {00}</displayFormat>
        <label>Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Services</pluralLabel>
    <recordTypes>
        <fullName>CareerServices</fullName>
        <active>true</active>
        <description>The record type used to manage the Career Services process for student</description>
        <label>Career Services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>